--- a/trunk/configs/templates/JCG-AC860M.config
+++ b/trunk/configs/templates/JCG-AC860M.config
@@ -210,6 +210,9 @@ CONFIG_FIRMWARE_INCLUDE_ARIA=n
 ### Include Aria2 WEB control. ~0.7MB
 CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=n
 
+### del VPN
+CONFIG_FIRMWARE_WEBUI_HIDE_VPN=y
+
 CONFIG_FIRMWARE_INCLUDE_CURL=y
 
 CONFIG_FIRMWARE_INCLUDE_SCUTCLIENT=n
