CONFIG_USB_SUPPORT

--- a/trunk/configs/templates/JCG-AC860M.config
+++ b/trunk/configs/templates/JCG-AC860M.config
@@ -101,6 +101,8 @@ CONFIG_FIRMWARE_INCLUDE_NFSC=n
 ### Include CIFS (SMB) client. ~0.2MB
 CONFIG_FIRMWARE_INCLUDE_CIFS=n
 
+CONFIG_USB_SUPPORT=n
+
 ############################################################
 ### Userspace configuration
 ############################################################
