--- a/trunk/user/www/Makefile
+++ b/trunk/user/www/Makefile
@@ -161,7 +161,7 @@ endif
 ifndef CONFIG_ATA
 	rm -f $(INSTALLDIR)/www/device-map/sata.asp
 endif
-ifndef CONFIG_USB_SUPPORT
+ifneq ($(CONFIG_USB_SUPPORT),y)
 	rm -f $(INSTALLDIR)/www/Advanced_Modem_others.asp
 	rm -f $(INSTALLDIR)/www/Advanced_Printer_others.asp
 	rm -f $(INSTALLDIR)/www/modem_isp.js
