--- a/trunk/configs/templates/K2P-USB.config
+++ b/trunk/configs/templates/K2P-USB.config
@@ -136,7 +136,7 @@ CONFIG_FIRMWARE_INCLUDE_HDPARM=y
 CONFIG_FIRMWARE_INCLUDE_PARTED=y
 
 ### Include SMB (and WINS) server. ~1.5MB
-CONFIG_FIRMWARE_INCLUDE_SMBD=y
+CONFIG_FIRMWARE_INCLUDE_SMBD=n
 
 ### using samba3.6 instead of samba3
 CONFIG_FIRMWARE_INCLUDE_SMBD36=y
@@ -154,13 +154,13 @@ CONFIG_FIRMWARE_INCLUDE_FTPD=y
 CONFIG_FIRMWARE_INCLUDE_RPL2TP=n
 
 ### Include EAP-TTLS and EAP-PEAP authentication support. openssl ~1.2MB, wpa_supplicant +0.04MB
-CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=y
+CONFIG_FIRMWARE_INCLUDE_EAP_PEAP=n
 
 ### Include HTTPS support. openssl ~1.2MB
 CONFIG_FIRMWARE_INCLUDE_HTTPS=n
 
 ### Include sftp-server. openssl ~1.2MB, sftp-server ~0.06MB
-CONFIG_FIRMWARE_INCLUDE_SFTP=y
+CONFIG_FIRMWARE_INCLUDE_SFTP=n
 
 ### Include dropbear SSH. ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_DROPBEAR=n
@@ -178,10 +178,10 @@ CONFIG_FIRMWARE_INCLUDE_OPENVPN=n
 CONFIG_FIRMWARE_INCLUDE_SSWAN=n
 
 ### Include Elliptic Curves (EC) to openssl library. ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EC=n
 
 ### Include "openssl" executable for generate certificates. ~0.4MB
-CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y
+CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n
 
 ### Include xUPNPd IPTV mediaserver. ~0.3MB
 CONFIG_FIRMWARE_INCLUDE_XUPNPD=n
@@ -193,7 +193,7 @@ CONFIG_FIRMWARE_INCLUDE_MINIDLNA=n
 CONFIG_FIRMWARE_INCLUDE_FIREFLY=n
 
 ### Include ffmpeg 0.11.x instead of 0.6.x for Minidlna and Firefly. ~0.1MB
-CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=y
+CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=n
 
 ### Include Transmission torrent. openssl ~1.2MB, transmission ~1.5MB
 CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=n
@@ -226,8 +226,8 @@ CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER=n
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT=n
 
 CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD=n
-
-CONFIG_FIRMWARE_INCLUDE_VLMCSD=y
+###启用vlmcsd(KMS激活服务) = y
+CONFIG_FIRMWARE_INCLUDE_VLMCSD=n
 
 CONFIG_FIRMWARE_INCLUDE_TTYD=y
 
