--- a/trunk/configs/boards/JCG-AC860M/kernel-3.4.x.config
+++ b/trunk/configs/boards/JCG-AC860M/kernel-3.4.x.config
@@ -1436,7 +1436,7 @@ CONFIG_USB_SERIAL_OPTION=m
 #
 # CONFIG_NOP_USB_XCEIV is not set
 # CONFIG_UWB is not set
-CONFIG_MMC=y
+CONFIG_MMC=m
 # CONFIG_MMC_DEBUG is not set
 # CONFIG_MMC_UNSAFE_RESUME is not set
 # CONFIG_MMC_CLKGATE is not set
@@ -1444,7 +1444,7 @@ CONFIG_MMC=y
 #
 # MMC/SD/SDIO Card Drivers
 #
-CONFIG_MMC_BLOCK=y
+CONFIG_MMC_BLOCK=m
 CONFIG_MMC_BLOCK_MINORS=8
 CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_SDIO_UART is not set
@@ -1461,7 +1461,7 @@ CONFIG_MMC_SDHCI_PLTFM=y
 # CONFIG_MMC_VIA_SDMMC is not set
 # CONFIG_MMC_VUB300 is not set
 # CONFIG_MMC_USHC is not set
-CONFIG_MTK_MMC=y
+CONFIG_MTK_MMC=m
 # CONFIG_MTK_AEE_KDUMP is not set
 # CONFIG_MTK_MMC_CD_POLL is not set
 # CONFIG_MEMSTICK is not set
