--- a/trunk/configs/boards/JCG-AC860M/kernel-3.4.x.config
+++ b/trunk/configs/boards/JCG-AC860M/kernel-3.4.x.config
@@ -70,9 +70,9 @@ CONFIG_PCIE_PERST_ONLY=y
 # CONFIG_RT2880_DRAM_32M is not set
 # CONFIG_RT2880_DRAM_64M is not set
 # CONFIG_RT2880_DRAM_128M is not set
-# CONFIG_RT2880_DRAM_256M is not set
-CONFIG_RT2880_DRAM_512M=y
-CONFIG_RALINK_RAM_SIZE=512
+CONFIG_RT2880_DRAM_256M=y
+#CONFIG_RT2880_DRAM_512M=y
+CONFIG_RALINK_RAM_SIZE=256
 # CONFIG_RT2880_UART_57600 is not set
 CONFIG_RT2880_UART_115200=y
 CONFIG_RALINK_UART_BRATE=115200
@@ -846,7 +846,7 @@ CONFIG_MTD_SPI_READ_NORM=y
 # CONFIG_RT2880_FLASH_4M is not set
 # CONFIG_RT2880_FLASH_8M is not set
 # CONFIG_RT2880_FLASH_16M is not set
-CONFIG_RT2880_FLASH_32M=y
+CONFIG_RT2880_FLASH_16M=y
 # CONFIG_RT2880_FLASH_AUTO is not set
 CONFIG_RT2880_MTD_PHYSMAP_START=0x1FC00000
 CONFIG_RT2880_MTD_PHYSMAP_LEN=0x0400000
@@ -1436,34 +1436,7 @@ CONFIG_USB_SERIAL_OPTION=m
 #
 # CONFIG_NOP_USB_XCEIV is not set
 # CONFIG_UWB is not set
-CONFIG_MMC=m
-# CONFIG_MMC_DEBUG is not set
-# CONFIG_MMC_UNSAFE_RESUME is not set
-# CONFIG_MMC_CLKGATE is not set
-
-#
-# MMC/SD/SDIO Card Drivers
-#
-CONFIG_MMC_BLOCK=m
-CONFIG_MMC_BLOCK_MINORS=8
-CONFIG_MMC_BLOCK_BOUNCE=y
-# CONFIG_SDIO_UART is not set
-# CONFIG_MMC_TEST is not set
-
-#
-# MMC/SD/SDIO Host Controller Drivers
-#
-CONFIG_MMC_SDHCI=y
-# CONFIG_MMC_SDHCI_PCI is not set
-CONFIG_MMC_SDHCI_PLTFM=y
-# CONFIG_MMC_TIFM_SD is not set
-# CONFIG_MMC_CB710 is not set
-# CONFIG_MMC_VIA_SDMMC is not set
-# CONFIG_MMC_VUB300 is not set
-# CONFIG_MMC_USHC is not set
-CONFIG_MTK_MMC=m
-# CONFIG_MTK_AEE_KDUMP is not set
-# CONFIG_MTK_MMC_CD_POLL is not set
+# CONFIG_MMC is not set
 # CONFIG_MEMSTICK is not set
 # CONFIG_NEW_LEDS is not set
 # CONFIG_ACCESSIBILITY is not set
